[package]
name = "lantag_c"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
scraper = "0.18.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11.0"
owo-colors = "4.0.0"
tabled = { version = "*", features = ["ansi"] }
tokio = { version = "1", features = ["full"] }
url = "2"
clap = { version = "4.4.14", features = ["derive"] }
anstyle = "1.0.4"
